@@ -1,3 +1,7 @@
+2006-04-02  Karine Delvare  <edhel@gimp.org>
+
+	* app/tools/gimprectangletool.c: square constraint with shift key.
+
 2006-04-02  Michael Natterer  <mitch@gimp.org>
 
 	Silence compiler warnings about...
